# internal-developer-portal

./: .dockerignore  .env.example  .env.production.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
docs/: local-validation.md  portal-product-spec.md  production-runbook.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.test.tsx  App.tsx  main.jsx  main.tsx  navigation.ts  sessionEvents.test.ts  sessionEvents.ts  styles.css  theme.js  vite-env.d.ts
migrations/2026-05-05-160000_create_sessions/: up.sql
migrations/2026-05-06-120000_rename_catalog_domain/: down.sql  up.sql
migrations/2026-05-06-130000_add_package_catalog_metadata/: down.sql  up.sql
scripts/: local-validate.ps1  preview-test-data.ps1  production-smoke.ps1
src/: api.rs  auth.rs  commands.rs  config.rs  connector_adapters.rs  connector_config_validation.rs  crypto.rs  lib.rs  models.rs  openapi.rs  repositories.rs  repository_db_tests.rs  schema.rs  server_app.rs  validation.rs
src/connector_adapters/: erp.rs  (+5 more)
tests/: audit_logs.rs  auth.rs  auth_guard_pool.rs  connector_scope.rs  connector_scope_update.rs  connectors.rs  dashboard.rs  data_scopes.rs  entra_sso.rs  frontend.rs  health.rs  login_throttle.rs  maintainers.rs  my_work.rs  notifications.rs  ownership.rs  packages.rs  reconciliation.rs  retention.rs  services.rs  session_limits.rs  startup.rs  worker_leases.rs
(+154 files in other folders)
