[package]
name = "rust-web-server"
default-run = "server"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
tokio = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
diesel = { version = "2.1", features = ["chrono"] }
diesel-async = { version = "0.4", features = ["postgres"] }
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.4"
argon2 = "0.5"
dotenvy = "0.15"
uuid = { version = "=1.10.0", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
